# health_monitor_tg_bot

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  tests.yml
alembic/versions/: 2acd7d8c7dee_initial_schema.py  8ae032cbe019_add_wellbeing.py
app/: __init__.py  bot_messages.py  create_test_data.py  createdb.sql  db.py  handlers.py  keyboard.py  keyboards.py  logging_config.py  main.py  measurement.py  settings.py
tests/: conftest.py  test_db.py  test_last_measurement.py  test_measurement_add_flow.py
